pages to B5, revisions through §16, plus typos and tweaks

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -1,5 +1,5 @@
 %!TEX root = forallx-adl.tex
-\thispagestyle{empty}
+\begin{titlingpage}
 
 ~\\[4cm]
 \begin{center}\forallxadl \end{center}
@@ -22,10 +22,8 @@
 
 {P.D.\ Magnus}\\
 \emph{University at Albany, State University of New York}
+\end{titlingpage}
 
-
-
-\newpage
 \thispagestyle{empty}%
 
 {\copyright\ \ifthenelse{\year=2005}{\number\year}{2005–\number\year} by Antony Eagle, Tim Button and P.D.\ Magnus. Some rights reserved.
