--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -42,7 +42,7 @@ Equally, it might have been presented with the conclusion in the middle:
 	\end{quote}
 When approaching an argument, we want to know whether or not the conclusion follows from the premises. So the first thing to do is to separate out the conclusion from the premises. As a guideline, the following words are often used to indicate an argument's conclusion:
 	\begin{center}
-		so, therefore, hence, thus, accordingly, consequently
+		so, therefore, hence, thus, accordingly, consequently, must
 	\end{center}
 And these expressions often indicate that we are dealing with a premise, rather than a conclusion
 	\begin{center}
