--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -59,7 +59,7 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
 % negation: {\sim} gives the tilde
 \def\enot{\ensuremath{\neg}}
 \def\ered{\ensuremath{\bot}}% TB: added to give an absurdity sign
-\def\maththe{\turnediota} % Æ added to used unicode rotated iota
+\def\maththe{\turnediota} % Æ added to used unicode rotated iota for definites
 \def\proves{\ensuremath{\vdash}}
 \def\entails{\ensuremath{\vDash}}
 \def\nproves{\ensuremath{\nvdash}}
@@ -801,7 +801,7 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
 
 
 % TB: information originally in the main body; but it is style information, so I have included it here. Modified Æ
-\hypersetup{pdfinfo={Title={forall x: Adelaide}, Author={Antony Eagle, Tim Button, and P.D. Magnus}, Subject={An open access introductory textbook in formal logic}, Keywords={truth-functional logic, propositional logic, predicate logic, first-order logic, natural deduction, fitch, philosophical logic}}, %
+\hypersetup{pdfinfo={Title={forall x: Adelaide}, Author={Antony Eagle, Tim Button, and P.D. Magnus}, Subject={An open access introductory textbook in formal logic}, Keywords={truth-functional logic, propositional logic, predicate logic, first-order logic, natural deduction, Fitch, philosophical logic}}, %
 %	bookmarks={true}, %
 	colorlinks={true}, %
 	linkcolor={orange},
