--- a/forallx-adl.tex
+++ b/forallx-adl.tex
@@ -1,6 +1,6 @@
 %!TEX program = xelatex
 %!encoding=UTF-8 Unicode
-\documentclass[two side, openany, 11pt, a4paper]{memoir}
+\documentclass[two side, openany, 10pt, b5paper]{memoir}
 \usepackage{forallx-adl}
 \makeindex
 \begin{document}
