--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -889,7 +889,7 @@ Show that the following arguments are invalid:
 \item $\forall x(Dx \eif \exists y Tyx) \ttherefore \exists y \exists z\ \enot y= z$
 \end{earg}
 
-\chapter{Reasoning about All Interpretations: Demonstrating Inconsistency and Validity}\label{s:All.Interp}
+\chapter[Reasoning about All Interpretations]{Reasoning about All Interpretations: Demonstrating Inconsistency and Validity}\label{s:All.Interp}
 
 \section{Logical truths and logical falsehoods}
 We can show that a sentence is \emph{not} a logical truth just by providing one carefully specified interpretation: an interpretation in which the sentence is false. To show that something is a logical truth, on the other hand, it would not be enough to construct ten, one hundred, or even a thousand interpretations in which the sentence is true. A sentence is only a logical truth if it is true in \emph{every} interpretation, and there are infinitely many interpretations. We need to reason about all of them, and we cannot do this by dealing with them one by one!
