induction discussion changed

--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -284,7 +284,7 @@ It is often possible to see that an argument is valid even when one has no idea 
 	\item[So:] The slithy toves did gyre and gimble in the wabe.
 \end{earg} This argument is valid, simply because of its structure (it has a premise conjoining two claims by `and', and a conclusion which is one of those claims). But is it sound? That would depend on figuring out what all those nonsense words mean!
 
-\section{Inductive arguments}
+\section{Inductive Assessment of Arguments}
 Many good arguments are inconclusive and invalid. Consider this one:
 	\begin{earg}
 		\item[] In January 1997, it rained in London.
@@ -293,9 +293,13 @@ Many good arguments are inconclusive and invalid. Consider this one:
 		\item[] In January 2000, it rained in London.
 	\item[So:] It rains every January in London.
 \end{earg}
-This argument generalises from observations about several cases to a conclusion about all cases. Such arguments are called \define{inductive} arguments. The argument could be made stronger by adding additional premises before drawing the conclusion: In January 2001, it rained in London; In January 2002\ldots. But, however many premises of this form we add, the argument will remain inconclusive. Even if it has rained in London in every January thus far, it remains \emph{possible} that London will stay dry next January.
+This argument generalises from observations about several cases to a conclusion about all cases. Though it is invalid, that doesn't mean it is a bad argument. The premises appear to provide some support for the conclusion, though it falls short of being conclusive. 
 
-The point of all this is that inductive arguments – even good inductive arguments – are not (deductively) valid. They are not \emph{watertight}. Unlikely though it might be, it is \emph{possible} for their conclusion to be false, even when all of their premises are true. In this book, we shall set aside (entirely) the question of what makes for a good inductive argument. Our interest is simply in sorting the (deductively) valid arguments from the invalid ones.
+\define{Induction} describes a form of reasoning from evidence to hypotheses about that evidence. For example, when we reason from a sample of eligible voters to a hypothesis about how the whole population will vote, we are reasoning inductively. \define{Inductive logic} is the attempt to generalise deductive logic to evaluate arguments in line with the canons of good inductive reasoning. The proponents of inductive logic think there might be a generalisation of deductive logic which enables us to evaluate arguments in a more fine-grained way than the options we've canvassed so far (i.e., just 'valid', and 'invalid and conclusive' and 'invalid and inconclusive'). A significant part of the project of inductive logic is the attempt to classify inconclusive arguments in terms of whether their premises provide good inductive evidence in favour of their conclusions. 
+
+In the example, the premises are of the form `In January $n$, it rains', and the conclusion is of the form `Every January, it rains'. This argument thus has a general conclusion drawn from instances of that generalisation. (That is, `it rains in January 1997' is an instance of the generalisation `it rains in January of every year'.) If we regard the foregoing premises as providing decent support for the conclusion, we might think that adding additional premises of the same sort before drawing the conclusion would make it even stronger: In January 2001, it rained in London; In January 2002\ldots. This principle, that a generalisation is increasingly supported the more instances we adduce, more might be part of our toolkit when evaluating arguments inductively. But, no matter how many premises of this form we add, the argument will remain inconclusive. Even if it has rained in London in every January thus far, it remains \emph{possible} that London will stay dry next January. (Even if we include every instance – past, present, and future – the argument will be inconclusive, because one will need the additional premise \emph{that there are no other instances than those we've included}.)
+
+The point of all this is that most arguments which are inductively very strong are not (deductively) valid. Arguments which represent very good examples of inductive reasoning generally are not \emph{watertight}. Unlikely though it might be, it is \emph{possible} for their conclusion to be false, even when all of their premises are true. In this book, our interest is simply in sorting the (deductively) valid arguments from the invalid ones. The project of inductive logic, of sorting the invalid arguments further into the inductively good and poor ones, we shall set aside entirely from here on. 
 
 
 
