--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -54,7 +54,8 @@ This book, like its predecessors, is released under a Creative Commons license (
 Typesetting was carried out entirely in \XeLaTeX\ using the \texttt{Memoir} class. The body text is set in Constantia; math is set in Cambria Math; sans serif in Calibri; and monospaced text in Consolas. The style for typesetting proofs is based on \texttt{fitch.sty} (v0.4) by Peter Selinger, University of Ottawa.
 
 \newpage
-\tableofcontents*
+\tableofcontents*\newpage
+\listoffigures*
 
 \chapter*{How to Use This Book}
 
